# CAPTCHA-Bypass-System

./: .env.example  .gitignore  README.md  account.json  augrument.csv  captcha_model.pth  clean_labels.py  decode.py  generate_captcha_data.py  model.py  organize_data.py  pyproject.toml  quick_train_test.py  retry_failed_labels.py  show_summary.py  simple_model.py  test_model.py  test_setup.py  train_CNN.py  train_captcha.py  train_clean.py  train_combined_model.py
